--- a/index.html
+++ b/index.html
@@ -5,25 +5,36 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.33eac9bf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.ccd4248b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3b240cc9.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.49c49146.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.2cd74735.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.c57165ac.js">
+		<link href="./_app/immutable/assets/0.72f59e48.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.856855cc.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ccd77b74.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.b6a8210b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.2641e341.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.c7b24a5d.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.11796ca6.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.ad0821cc.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 
 
-<h1>Welcome to SvelteKit</h1>
-<p>Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p>
+<div class="navbar bg-base-100"><div class="flex-none"><button class="btn btn-square btn-ghost"><label for="my-drawer" class="drawer-button"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg></label></button></div>
+  <div class="flex-1"><a class="btn btn-ghost normal-case text-xl">Reactive Programming</a></div></div>
+<div class="drawer"><input id="my-drawer" type="checkbox" class="drawer-toggle">
+    <div class="drawer-content"></div> 
+    <div class="drawer-side"><label for="my-drawer" class="drawer-overlay"></label>
+      <ul class="menu p-4 w-80 bg-base-100 text-base-content">
+        <li><a>Reactive Programming</a></li>
+        <li><a>Rx.net</a></li>
+        <li><a>Rxjs</a></li>
+        <li><a>Reference Links</a></li></ul></div>
+  </div>
 
 
 			
 			<script>
 				{
-					__sveltekit_fcffrq = {
+					__sveltekit_zr3qez = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -33,8 +44,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.33eac9bf.js"),
-						import("./_app/immutable/entry/app.49c49146.js")
+						import("./_app/immutable/entry/start.ccd77b74.js"),
+						import("./_app/immutable/entry/app.c7b24a5d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
