--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.ccc9c823.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.90afeedd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.928a45a7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.293336df.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3d96edcf.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.44834ca3.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.5e9ccdd5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5a54c7c4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.809bc952.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.f2d2c1ff.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.df8ca80b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -24,7 +24,7 @@ Welcome!
   <div class="drawer-content"></div>
   <div class="drawer-side"><label for="my-drawer" class="drawer-overlay"></label>
     <ul class="menu p-4 w-80 bg-base-100 text-base-content">
-      <li><a href="/introduction">Reactive Programming</a></li>
+      <li><a href="./introduction">Reactive Programming</a></li>
       <li><a>Rx.net</a></li>
       <li><a>Rxjs</a></li>
       <li><a>Reference Links</a></li></ul></div>
@@ -34,7 +34,7 @@ Welcome!
 			
 			<script>
 				{
-					__sveltekit_oya06u = {
+					__sveltekit_2yeyls = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -44,8 +44,8 @@ Welcome!
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.90afeedd.js"),
-						import("./_app/immutable/entry/app.44834ca3.js")
+						import("./_app/immutable/entry/start.928a45a7.js"),
+						import("./_app/immutable/entry/app.809bc952.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
