--- a/introduction.html
+++ b/introduction.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.ccc9c823.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.928a45a7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.6c4bd0c2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.293336df.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5a54c7c4.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.809bc952.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.f2d2c1ff.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.d6c8efeb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.a0422b85.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.5e9ccdd5.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.5b6bf9d1.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.876f4099.js">
 	</head>
@@ -25,7 +25,7 @@
   <div class="drawer-content"></div>
   <div class="drawer-side"><label for="my-drawer" class="drawer-overlay"></label>
     <ul class="menu p-4 w-80 bg-base-100 text-base-content">
-      <li><a href="./introduction">Reactive Programming</a></li>
+      <li><a href="/introduction">Reactive Programming</a></li>
       <li><a>Rx.net</a></li>
       <li><a>Rxjs</a></li>
       <li><a>Reference Links</a></li></ul></div>
@@ -35,7 +35,7 @@
 			
 			<script>
 				{
-					__sveltekit_2yeyls = {
+					__sveltekit_n8ni5v = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -45,8 +45,8 @@
 					const data = [null,null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.928a45a7.js"),
-						import("./_app/immutable/entry/app.809bc952.js")
+						import("./_app/immutable/entry/start.6c4bd0c2.js"),
+						import("./_app/immutable/entry/app.a0422b85.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 4],
