--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.ccc9c823.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.6c4bd0c2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.c500cab1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.293336df.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.d6c8efeb.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.a0422b85.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.6d6104b5.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.41dd18ff.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.5e9ccdd5.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.df8ca80b.js">
 	</head>
@@ -34,7 +34,7 @@ Welcome!
 			
 			<script>
 				{
-					__sveltekit_n8ni5v = {
+					__sveltekit_x8ml9x = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -44,8 +44,8 @@ Welcome!
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.6c4bd0c2.js"),
-						import("./_app/immutable/entry/app.a0422b85.js")
+						import("./_app/immutable/entry/start.c500cab1.js"),
+						import("./_app/immutable/entry/app.41dd18ff.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
